--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   bubble: ^1.2.1
+  web_socket_channel: ^2.1.0
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
