--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   shared_preferences: ^2.3.2
   web_socket_channel: ^2.1.0
   http: ^0.13.3
-
+  mailer: ^6.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
