--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -3,7 +3,10 @@ plugins {
     id "kotlin-android"
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"   
-    id "com.google.gms.google-services"
+    // // Add the dependency for the Google services Gradle plugin
+    // id 'com.google.gms.google-services' version '4.4.2' apply false
+    // Add the Google services Gradle plugin
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -44,6 +47,11 @@ flutter {
     source = "../.."
 }
 dependencies{
+    // Import the Firebase BoM
     implementation(platform("com.google.firebase:firebase-bom:33.3.0"))
+
+    // TODO: Add the dependencies for Firebase products you want to use
+    // When using the BoM, don't specify versions in Firebase dependencies
     implementation("com.google.firebase:firebase-analytics")
+
 }
