--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -53,5 +53,6 @@ dependencies{
     // TODO: Add the dependencies for Firebase products you want to use
     // When using the BoM, don't specify versions in Firebase dependencies
     implementation("com.google.firebase:firebase-analytics")
-
+    implementation("com.google.firebase:firebase-messaging")
+    // apply plugin: 'com.google.gms.google-services'
 }
