--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   web_socket_channel: ^2.1.0
   http: ^0.13.3
   mailer: ^6.2.0
+  firebase_messaging: ^15.1.3
+  file_picker: ^5.2.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
