--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,13 @@ dependencies:
   mailer: ^6.2.0
   firebase_messaging: ^15.1.3
   file_picker: ^5.2.2
+  flutter_spinkit: ^5.2.1
+  rxdart: ^0.28.0
+  video_player: ^2.9.2
+  path_provider: ^2.0.11
+  chewie: ^1.5.0
+  mime: ^1.0.0
+  intl: ^0.18.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
