--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   mime: ^1.0.0
   intl: ^0.18.0
   flutter_bloc: ^8.1.6
+  emoji_picker_flutter: ^3.1.0
+  provider: ^6.1.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
